# uni

./: .gitignore  CMakeLists.txt  Doxyfile  disablegpg.sh  new_Project.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CICD_test.yml
src/: 3dplot.py  main.c
src/H2-1/: CMakeLists.txt
src/H2-1/include/: student.h
src/H2-1/src/: student.c
src/H2-1/test/: test_functions.cpp
src/H2-2/: CMakeLists.txt
src/H2-2/include/: animals.hpp
src/H2-2/src/: animal.cpp  main.cpp  mammal.cpp  spider.cpp
src/H2-2/test/: test_animals.cpp
src/lesson_1/: CMakeLists.txt  lesson_1.cpp
src/lessons/: CMakeLists.txt  lessons.cpp
src/lessons/CvP/: CMakeLists.txt  cvplot.cpp  floppy_disk_secret.py  generate_image.py  pixels.txt  readcv.cpp  test.cpp  test.py
src/lessons/opencv/: CMakeLists.txt  opencv.cpp
src/test1/: CMakeLists.txt  main.c
